# ai-agents

./: .gitignore  README.md
blog-post/: blog_generater.py  content_strategy_agent.py  main.py  performance_agent.py  research_agent.py  seo_agent.py  visual_agent.py  writing_agent.py
book_recommender/: book_recommender.py  buffered_book_recommender.py  main.py
fastmcp-file-manager/: TEST_README.md  main.py  pyproject.toml  run_tests.py  test_mcp_server.py
fastmcp-file-manager/src/file_manager/: __init__.py  cli.py  main.py
github_qa/: .env  github_qa_tool.py  main.py
job_resume_generator/: job_extractor.py  main.py  resume.py
market_researcher/: compaign_agent.py  digital_marketer.py  main.py  research_agent.py  tasks.py
mcp-demo/: mcp_server_config.json  pyproject.toml  run_server.py
mcp-demo/src/mcp_project/: __init__.py  dev.py  main.py
mcp-demo/tests/: test_mcp_server.py
pdfs_qna_llm/: .env  agent_chain.py  main.py  pdf.py  query_processor.py
