[project]
name = "mcp_project"
version = "0.1.0"
description = "MCP Server Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
mcp-project = "mcp_project.main:main"
mcp-dev = "mcp_project.dev:run_dev"

[tool.uv]
# uv specific configurations
dev-dependencies = [ "pytest>=7.0.0", "black>=23.0.0",   "ruff>=0.1.0","mypy>=1.0.0","pytest-asyncio>=0.21.0",]

[tool.uv.sources]
# You can add alternative package sources here

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']